# tokalang

./: .gitattributes  .gitignore  .tmp_exe  404.html  CITATION.cff  CMakeLists.txt  NOVA_RELEASE.md  README.md  README_zh.md  TODO.md  index.html  install.sh  pass_test.sh  pass_test_lli.sh  rebuild.sh  rules.md  sandbox  sandbox.tk  sandbox_test.tk  single_test.sh  sitemap-0.xml  sitemap-index.xml  test_fail.sh  tokaForAI.md
.github/workflows/: deploy.yml  playground.yml  release.yml
.toka/: catalog.json
_astro/: common.O9wQ4FmN.css
advanced/async/: index.html
advanced/concurrency/: index.html
advanced/generics/: index.html
bench/: run.sh
bench/rust_json/: Cargo.toml
cli-tooling/: index.html
compiler/src/: main.tk
concepts/attributes/: index.html
concepts/error-handling/: index.html
concepts/ownership/: index.html
concepts/pattern-matching/: index.html
concepts/pointers/: index.html
concepts/soul-identity/: index.html
demos/: ws_client.html  ws_client.tk  ws_server.tk
docs/: BUILD_TOOL.md  PACKAGE_MANAGER_DESIGN.md  TODO_POST_BETA.md  guide.md  guide_zh.md  release_notes_v0.9.8-02.md  string_api.md  string_tiering_zh.md  syntax_zh.md
docs/design/: AttributeDecoration.md  AttributeSystem.md  Generics.md  MemoryModel.md  Ownership.md  Pointers.md  Shapes.md
editors/code/: .vscodeignore  extension.js  package-lock.json  package.json
examples/: cat.tk  char_freq.tk  sqlite3_demo.tk  termios_raw.tk  word_freq.tk
examples/hello_world/: Project.tk
examples/my_colored_demo/: Project.tk
include/toka/: AST.h  BorrowChecker.h  CodeGen.h  DiagnosticDefs.def  DiagnosticEngine.h  Lexer.h  PAL_Checker.h  Parser.h  Sema.h  SourceManager.h  TKIExporter.h  Token.h  Type.h
installation/: index.html
introduction/: index.html
lib/: build.tk
lib/core/: bytes.tk  comptime.tk  libc.tk  mem.tk  memory.tk  option.tk  prelude.tk  primitives.tk  result.tk  str.tk  string.tk  task.tk  traits.tk  types.tk  utf8.tk
lib/std/: arena.tk  atomic.tk  btree_map.tk  btree_set.tk  btreemap.tk  btreeset.tk  bufio.tk  channel.tk  char.tk  context.tk  core_ext.tk  debug.tk  deque.tk  env.tk  error.tk  fmt.tk  fs.tk  hash_map.tk  hash_set.tk  hashset.tk  heap.tk  io.tk  list.tk  llvm.tk  log.tk  map.tk  math.tk  memory.tk  mpsc.tk  net.tk  net_http.tk  panic.tk  path.tk  prelude.tk  process.tk  release.tk  ring.tk  set.tk  slab.tk  string.tk  (+6 more)
lib/stdx/: flag.tk  json.tk  span.tk  url.tk  websocket.tk
lib/sys/: libc.tk  linux.tk  llvm.tk  llvm_shim.cpp  llvm_shim.h  macos.tk  net_linux.tk  net_macos.tk  net_windows.tk  sync.tk  termios.tk  thread.tk  toka_rt.c  windows.tk
lib/toolchain/: llvm.tk
pagefind/: pagefind-entry.json  pagefind.en_79aff1351f.pf_meta  pagefind.en_abdccddf49.pf_meta  pagefind.zh-cn_736eef8763242.pf_meta  pagefind.zh-cn_fe56d03cdcc84.pf_meta
pagefind/fragment/: en_10c056e.pf_fragment  en_194c2a0.pf_fragment  en_2d68529.pf_fragment  en_356281c.pf_fragment  en_43d8cb4.pf_fragment  en_47a3972.pf_fragment  en_48e23d6.pf_fragment  en_605776b.pf_fragment  en_69129a4.pf_fragment  en_76f130e.pf_fragment  en_88f6789.pf_fragment  en_a023ce8.pf_fragment  en_a33aede.pf_fragment  en_a346fdb.pf_fragment  en_a44ede7.pf_fragment  en_bc9e578.pf_fragment  en_c4247ec.pf_fragment  en_ce98ab2.pf_fragment  en_d1b6aa4.pf_fragment  (+27 more)
playground/: app.js  index.html  style.css  toka_mode.js  tokacheck.js  tokacheck.wasm
project-structure/: index.html
spec/: diagnostic.baseline.json  diagnostic.map.json
src/: CMakeLists.txt  DiagnosticEngine.cpp  Type.cpp  main.cpp  wasm_api.cpp
src/AST/: TKIExporter.cpp
src/Basic/: SourceManager.cpp
src/CodeGen/: CodeGen.cpp  CodeGen_Decl.cpp  CodeGen_Expr.cpp  CodeGen_Memory.cpp  CodeGen_Stmt.cpp
src/Lexer/: Lexer.cpp
src/Parser/: Parser.cpp  Parser_Decl.cpp  Parser_Expr.cpp  Parser_Stmt.cpp
src/Sema/: BorrowChecker.cpp  PAL_Checker.cpp  Sema.cpp  Sema_Expr.cpp  Sema_Expr_Binary.cpp  Sema_Expr_Call.cpp  Sema_Expr_Closure.cpp  Sema_Expr_Init.cpp  Sema_Expr_Member.cpp  Sema_Expr_Unary.cpp  Sema_Stmt.cpp  Sema_Template.cpp  Sema_Type.cpp
test_pkg_demo/: toka.toml
tests/: size_check.c
tool/: test_fail.sh  test_pass.sh  test_single.sh  tokap.py
website/: astro.config.mjs  package-lock.json
www/: app.js  index.html  style.css
zh/: index.html
(+634 files in other folders)
